...
    <string name="save_button">Guardar</string>
    <string name="date_button">Seleccionar fecha</string>
    <string name="cancel_button">Cancelar</string>
    <string name="home_image_description">Logo vinilos app</string>
    <string-array name="genres">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>

    <string-array name="record_labels">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Record</item>
    </string-array>
</resources>
