...
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:visibility="@{isLoading ? View.INVISIBLE : View.VISIBLE}">

            <EditText
                android:id="@+id/AlbumSearchEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableEnd="@drawable/ic_search"
                android:hint="@string/hint_artist_search"
                android:imeOptions="actionDone"
...
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/list_item_albumes" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addAlbumButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="8dp"
            android:contentDescription="@string/add_album_button"
            app:srcCompat="@drawable/ic_baseline_library_add_24"
...
